issue 3321 icon toolbar position
Made the toolbar open downwards and moved the toolbar a bit lower when the icon is on the top so it doesn't cover the text

--- a/src/components/toolbar/editor.scss
+++ b/src/components/toolbar/editor.scss
@@ -1,5 +1,9 @@
 .maxi-toolbar__popover {
 	z-index: 29;
+
+	&.icon-position-top {
+		transform: translateY(30px);
+	}
 	
 	.components-popover__content {
 		overflow: visible;
